# ws-data-quality-streamlit-project

./: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: dados_correto.xlsx  dados_errado.xlsx
sql/: vendas.sql
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_integracao.py
