[tool.poetry]
name = "ws-data-quality-streamlit-project"
version = "0.1.0"
description = ""
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
email-validator = "^2.2.0"
taskipy = "^1.13.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest tests -v"
run = "streamlit run src/app.py"